--- a/css/app.css
+++ b/css/app.css
@@ -2,4 +2,85 @@
     box-sizing: border-box;
     margin: 0%;
     padding: 0%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header {
+    max-width: 1920px;
+    height: 80px;
+    border: 1px dashed black;
+}
+
+li {
+    list-style: none;
+}
+
+.row-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 80px;
+    font-size: 19px;
+}
+
+#logo-top {
+    position: relative;
+    top: 5px;
+}
+
+#start {
+    color: white;
+    background-color: #0061FF;
+    padding: 8px 15px;
+}
+
+.left-ul, .right-ul {
+    display: flex;
+}
+
+.row-header a {
+    text-decoration: none;
+    padding-inline: 22px;
+    color: black;
+}
+
+.hero {
+    max-width: 1920px;
+    height: 740px;
+    background-color: #B4D0E7;
+}
+
+.hero h1 {
+    max-width: 1200px;
+    font-size: 76px;
+    margin: auto;
+    padding-top: 83px;
+    padding-bottom: 57px;
+}
+
+.row-hero {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.col-left-hero {
+    width: calc(( 100% * 2) / 3 );
+}
+
+.col-left-hero p {
+    font-size: 20px;
+    padding-bottom: 30px;
+}
+
+.col-left-hero button {
+    margin-bottom: 30px;
+}
+
+.col-left-hero i {
+    padding-top: 30px;
+}
+.col-right-hero img {
+    max-width: 100%;
 }
