--- a/css/app.css
+++ b/css/app.css
@@ -106,8 +106,22 @@ li {
 
 .row-body-main {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-basis: 0;
     border: 1px grey solid;
+    margin-right: -2px;
+}
+
+.card100 {
+    flex-basis: 100%;
+}
+
+.card-main div {
+    border: 1px black solid;
 }
