--- a/css/app.css
+++ b/css/app.css
@@ -107,6 +107,8 @@ li {
 .row-body-main {
     display: flex;
     flex-wrap: wrap;
+    column-gap: 52px;
+    row-gap: 50px;
 }
 
 .card {
@@ -114,7 +116,7 @@ li {
     flex-direction: column;
     flex-grow: 1;
     flex-basis: 0;
-    border: 1px grey solid;
+    border: 1px #EDEDEE solid;
     margin-right: -2px;
 }
 
@@ -123,7 +125,10 @@ li {
 }
 
 .card-main div {
-    border: 1px black solid;
+    border: 1px #EDEDEE solid;
+    border-bottom-color: white;
+    border-left-color: white;
+    border-right-color: white;
 }
 
 .card-main-top {
@@ -170,10 +175,53 @@ li {
     color: #0061FF;
 }
 
+.card100 {
+    border: 1px #EDEDEE solid;
+
+}
 .card-header h5 {
     text-align: center;
     padding: 11px;
     font-weight: 400;
     font-size: 16px;
-    border-bottom: 1px black solid;
+    border-bottom: 1px #EDEDEE solid;
+}
+
+.body-col100 {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 30px;
+    padding-inline: 26px;
+}
+
+.header-col100 {
+    border-bottom: 1px #EDEDEE solid;
+}
+
+.header-col100 h3 {
+    text-align: center;
+    font-weight: 400;
+    font-size: 16px;
+    padding: 11px;
+}
+
+.col100-left {
+    width: 66%;
+}
+
+.col100-left h3 {
+    padding-bottom: 24px;
+}
+
+.col100-left h4 {
+    padding-bottom: 50px;
+}
+
+.button {
+    background-color: #0061FF;
+    text-decoration: none;
+    color: white;
+    display: block;
+    padding: 10px 30px 10px 30px;
+    text-align: center;
 }
