--- a/css/app.css
+++ b/css/app.css
@@ -98,6 +98,7 @@ li {
 
 .radio {
     cursor: pointer;
+    padding-bottom: 45px;
 }
 
 #spacing {
@@ -192,6 +193,7 @@ li {
     justify-content: space-between;
     padding-top: 30px;
     padding-inline: 26px;
+    padding-bottom: 31px;
 }
 
 .header-col100 {
@@ -230,14 +232,38 @@ li {
     display: flex;
     justify-content: space-between;
     padding-top: 150px;
+    padding-bottom: 163px;
 
 }
 
-.col-left {
-    width: calc(( 100% / 5) * 3);
+.col-left-partner {
+    width: calc(( 100% / 5) * 3);  
 }
 
-.col-left img {
+.col-left-partner img {
     aspect-ratio: auto 691 / 591;
     width: 100%;
+}
+
+.col-right-partner {
+    width: calc((100% / 5 ) *2);
+    margin-inline: 50px;
+    margin-top: 55px;
+}
+
+.col-right-partner h3 {
+    font-size: 26px;
+}
+
+.col-right-partner p {
+    padding: 17px 0px 30px 0px;
+    font-size: 18px ;
+}
+
+.button-partner {
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    font-size: 18px;
+    padding: 13px 17px 13px 17px;
 }
